Fix no wrap error in feed

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,6 +3,7 @@
 /*Home Card*/
 
 #timeline {
+  word-wrap: break-word;
   width: 100%;
   height: 100%;
   display: flex;
